--- a/kubernetes/images/generator/Dockerfile
+++ b/kubernetes/images/generator/Dockerfile
@@ -5,9 +5,9 @@ ARG BRANCH
 ARG REPOSITORY
 
 ENV COMMIT_HASH ${COMMIT_HASH:-null}
-ENV BRANCH ${BRANCH:-development}
-ENV REPOSITORY ${REPOSITORY:-https://github.com/fossasia/susi_fbbot.git}
-ENV INSTALL_PATH /facebook
+ENV BRANCH ${BRANCH:-mastet}
+ENV REPOSITORY ${REPOSITORY:-https://github.com/fossasia/susi_alexa_skill.git}
+ENV INSTALL_PATH /alexa
 
 RUN mkdir -p $INSTALL_PATH
 
@@ -17,6 +17,6 @@ COPY . .
 
 RUN bash setup.sh
 
-WORKDIR $INSTALL_PATH/susi_fbbot
+WORKDIR $INSTALL_PATH/susi_alexa_skill
 
 CMD [ "npm", "start" ]
